<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp" >
            <TextView
                android:id="@+id/text_view_products"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_products"
                android:layout_weight="2"/>

            <Spinner
                android:id="@+id/spinner_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp" >
            <TextView
                android:id="@+id/text_view_count"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_count"
                android:layout_weight="2"/>

            <EditText
                android:id="@+id/edit_text_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_weight="1" >
        <Button
            android:id="@+id/button_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/button_add_product"/>

        <Button
            android:id="@+id/button_delete_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/button_delete_product"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_weight="1000">
        <ScrollView
            android:id="@+id/scrollViewBasketProducts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_alignParentLeft="true">

            <RelativeLayout
                android:id="@+id/relativeLayoutBasketProducts"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/tableLayoutBasketProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_total_price"
        android:layout_margin="10dp"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_total_price_text"/>

    <Button
        android:id="@+id/button_add_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_add_order_text"/>

</LinearLayout>